@startuml

skinparam linetype ortho

class AssociateResourceUI {
}

class ResourceDTO {
email: String
projectCode: int
startDate: Date
percentAllocation: double
costPerHour: double
roleName: String
}

class AssociateResourceController {
accountList: AccountList
roleList: RoleList
projectList: ProjectList
addResource(resourceDTO)
}

class AccountList {
accountList: List<Account>
getAccount(accountEmail)
}

class Account {
profile: Profile
isUser()
}

class RoleList {
roleList: List<Role>
getRole(roleName)
}

class Role {
description: String
}

class ProjectList {
projectList: List<Project>
getProject(projectCode)
}

class Project {
code: int
name: String
description: String
startDate: Date
endDate: Date
customer: String
sprintDuration: int
numberOfPlannedSprints: int
projectStatus: String
budget: double
resourceList: ResourceList
addResource(account, role, resourceDTO)
}

class ResourceList {
resourceList: List<Resource>
addResource(account, role, resourceDTO)
existsActiveResourceWithAccount(account)
isRoleOccupied(role)
}

class Resource {
role: Role
account: Account
startDate: Date
endDate: Date
percentAllocation: double
costPerHour: double
isAccountOfResource(account)
hasRole(role)
isActive()
}

AssociateResourceUI o-- AssociateResourceController
AssociateResourceController o-- ProjectList
ProjectList *-- Project
Project o-- ResourceList
ResourceList *-- Resource
AccountList *-- Account
RoleList *-- Role
AssociateResourceController o-- AccountList
AssociateResourceController ..> Account
AssociateResourceController o-- RoleList
Resource o-- Account
Resource o-- Role
AssociateResourceUI ..> ResourceDTO
AssociateResourceController ..> ResourceDTO
Project ..> ResourceDTO
ResourceList ..> ResourceDTO
AssociateResourceController ..> Project
AssociateResourceController ..> Role
@enduml